--- a/circle.yml
+++ b/circle.yml
@@ -2,5 +2,5 @@ deployment:
     production:
         branch: master
         commands:
-            - git push git@heroku.com:rabsv.git $CIRCLE_SHA1:refs/heads/master
-            - heroku run rake db:migrate --app heroku_app_name
+            - git push git@heroku.com:rabsv.git $CIRCLE_SHA1:master
+            - heroku run rake db:migrate --app rabsv
